--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* General Reset */
 html {
-    align-items: center;
+    text-align: center;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
